--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rcrt1"
-version = "0.1.0"
-authors = ["Harald Hoyer <harald@redhat.com>"]
+version = "1.0.0"
+authors = ["Harald Hoyer <harald@profian.com>"]
 edition = "2018"
 license = "Apache-2.0"
 homepage = "https://github.com/enarx/rcrt1"
@@ -23,4 +23,3 @@ is-it-maintained-open-issues = { repository = "enarx/rcrt1" }
 [dependencies]
 libc = { version = "0.2", features = [] }
 goblin = { version = "0.4", default-features = false, features = [ "elf64" ] }
-
