feat: use edition 2021
and specifiy minimum rust version == `1.56`

Signed-off-by: Harald Hoyer <harald@profian.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 name = "rcrt1"
 version = "1.0.0"
 authors = ["Harald Hoyer <harald@profian.com>"]
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 license = "Apache-2.0"
 homepage = "https://github.com/enarx/rcrt1"
 repository = "https://github.com/enarx/rcrt1"
